good on mobile, need to fix hyphens on desktop browsers

--- a/src/index.css
+++ b/src/index.css
@@ -28,6 +28,10 @@ body {
   @apply px-2 sm:px-0 text-offwhite;
 }
 
+h1 {
+  @apply text-gray-300
+}
+
 .contactInput {
   @apply outline-none bg-slate-400/10 rounded-sm border-b px-6 py-4 border-[#242424] placeholder-gray-500 transition-all focus:border-sungold/80 focus:text-sungold text-sungold/70 hover:border-sungold/40;
 }
